long-cloud: can we output html?

--- a/text_games/vocab_table.html
+++ b/text_games/vocab_table.html
@@ -1,4 +1,4 @@
-<table border="1" class="dataframe">
+<!DOCTYPE html><html><head></head><body><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th></th>
@@ -1171,4 +1171,4 @@
       <td>ryba</td>
     </tr>
   </tbody>
-</table>
+</table></body></html?
